performance-safe for standalone and yarn. next: recommendations